# openapi.yaml
@@ -4,7 +4,7 @@ info:
   description: "A JWT based API for managing users and issuing JWT tokens "
   version: 0.0.1
 paths:
-  /auth/v1/token:
+  /token:
     summary: ""
     post:
       parameters:
@@ -34,7 +34,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Session"
-  /auth/v1/signup:
+  /signup:
     summary: ""
     post:
       parameters:
@@ -54,7 +54,7 @@ paths:
                 oneOf:
                   - $ref: "#/components/schemas/Session"
                   - $ref: "#/components/schemas/User"
-  /auth/v1/otp:
+  /otp:
     summary: ""
     post:
       parameters:
